Added additional Ansible tags for XPACK tasks

--- a/tasks/xpack/elasticsearch-xpack.yml
+++ b/tasks/xpack/elasticsearch-xpack.yml
@@ -6,6 +6,9 @@
 
 #Security configuration
 - include: security/elasticsearch-security.yml
+  tags:
+    - xpack-security
+
 
 #Add any feature specific configuration here
 - name: Set Plugin Directory Permissions
